--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
+  name             : "Jeff McAdams"
+  avatar           : "jeff profile pic.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
