Edited the location

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Jeff McAdams"
   avatar           : "jeff profile pic.jpg"
   bio              : "I work as a librarian. I try to help people with open scholarly communications."
-  location         : "University of North Carolina at Charlotte"
+  location         : "Charlotte, NC"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=nceiuUwAAAAJ&hl=en"
